fixed navbar flickering on chrome

--- a/src/components/employeesCard/EmployeeCard.module.scss
+++ b/src/components/employeesCard/EmployeeCard.module.scss
@@ -13,6 +13,7 @@
   margin: 16px;
   transition: 0.3s;
   -webkit-transform: translateZ(0);
+  transform: translate3d(0, 0, 0);
 
   &:hover {
     transform: scale(1.08);
